[project]
name = "dabs-with-uv"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "renardeinside", email = "polarpersonal@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dabs-with-uv = "dabs_with_uv:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "delta-spark>=3.2.1",
    "pyspark>=3.5.4",
]

[tool.hatch.version]
source = "vcs"